# piecewise

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
src/partial_application/: impls.rs  mod.rs
src/tuple_traits/: impls.rs  mod.rs
